Adición del link de quienes somos y arreglos cosméticos

--- a/QS.html
+++ b/QS.html
@@ -5,16 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestros Juegos</title>
     <link rel="stylesheet" href="Styles/styleCuerpo.css">
+    <nav class="nav">
+        <ul class="nav-list">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="QS.html">Quienes somos</a></li>
+          <li><a href="">Noticias</a></li>
+          <li><a href="nuestrosJuegos.html">Nuestros Juegos</a></li>
+        </ul>
+      </nav>
 </head>
 <body>
-    <nav>
+    <!-- <nav>
         <h1>Quienes somos</h1>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#arriba">Nosotros</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
-    </nav>
+    </nav> -->
     <section id="arriba" class="banner-cabecera_2">
         <div class="contenido">
             <h1>Una empresa es tan buena como la gente que trabaja en ella.</h1>
@@ -40,17 +48,8 @@
                 <img src="IMG/QS4.JPG" alt="Equipo_4">
                 <div class="description">Si todo sale bien con la prueba de concepto, entonces la producción arranca. Se establecen todos los departamentos y puestos necesarios para trabajar en el proyecto: desde artistas hasta programadores.</div>
             </div>
-            <!-- <div class="game">
-                <img src="IMG/5.jpg" alt="gtav">
-                <div class="description">Los Santos, una extensa metrópolis llena de gurús de autoayuda, aspirantes a estrellas y famosos en decadencia tratando de mantenerse a flote en una era de incertidumbre económica y tele por cable barata. En medio de esta confusión, tres criminales muy distintos lo arriesgan todo en una serie de audaces y peligrosos asaltos que podrían solucionarles la vida.</div>
-            </div>
-            <div class="game">
-                <img src="IMG/6.jpg" alt="Starfield">
-                <div class="description">Es el año 2330 la humanidad ha abandonado la tierra hace cientos de años, el jugador en el papel del Protagonista se embarcara en una aventura a través de los Sistemas Colonizados tras descubrir un extraño objeto en un trabajo de minería recibes contacto de un misterioso grupo llamado Constelación, el ultimo grupo de exploradores espaciales que se embarca mas allá de los sistemas ya explorados, quienes te invitaran a desentrañar el misterio de estos misteriosos artefactos y descubrir: ¿Qué se encuentra mas allá de las estrellas que conocemos?.</div>
-            </div> -->
             <div class="game_1">
                 <img src="IMG/QS5.jpg" alt="Misión">
-                <!-- <div class="description">Dos equipos compiten en múltiples rondas con un modo de juego enfocado en objetivos con la misión de ganar suficientes rondas para llevarse la victoria.</div> -->
             </div>
             <div class="game_1">
                 <img src="IMG/QS6.jpg" alt="Visión">
