--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             quaerat eligendi atque commodi officia voluptatem similique, tempora
             dolorum nobis. Nisi. voluptates.
           </p>
-          <a href="PaginasInternas/form.html">Trabaja con nosotros</a>
+          <a href="/PaginasInternas/form.html">Trabaja con nosotros</a>
         </div>
         <img
           src="IMG/Index/annie-spratt-QckxruozjRg-unsplash.webp"
